--- a/css/photographer.css
+++ b/css/photographer.css
@@ -6,8 +6,72 @@
     background-color: #FAFAFA;
     height: 300px;
     margin: 0 100px;
+    position: relative;
+}
+#photographerImageStyle{
+    position: absolute;
+    right: 50px;
+    top: 50px;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.photographerPosition{
+    position: absolute;
+    left: 50px;
+}
+#photographerNameStyle{
+    top:20px;
+    font-size:55px;
+    color: #D3573C;
+    font-weight: 400;
+}
+#photographerTitleStyle{
+    top: 100px;
+    font-size: x-large;
+    font-weight: normal;
+    color: #901C1C;
+}
+#photographerTagStyle{
+    top: 160px;
+    font-size: 20px;
+    color: gray;
+} 
+.contactButtonPosition {
+    position: absolute;
+    top: 126px;
+    left: 534px;
 }
 
+#containerImage{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 80px;
+    margin: 100px 100px 0 100px;
+}
+#containerImage video{
+    object-fit: cover;
+    border-radius: 5px;
+}
+.dimensionImg{
+    width: 350px;
+    height: 350px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.positionOfLikes{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.titleStyle{
+    color: #901C1C;
+    font-size: 18px;
+}
+.colorOfHeart{
+    color: #901C1C;
+}
 .contact_button {
     font-size: 20px;
     font-weight: bold;
@@ -19,6 +83,10 @@
     background-color: #901C1C;
     border-radius: 5px;
     cursor: pointer;
+}
+.contact_button:hover{
+    background-color: #D3573C;
+    color: black;
 }
 
 .modal {
