--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,5 +1,17 @@
 #contact_modal {
     display: none;
+    position: fixed;
+    z-index: 100;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+    background-color: rgb(250, 241, 241);
+    padding-top: 30px;
 }
 
 .photograph-header {
@@ -43,12 +55,32 @@
     top: 126px;
     left: 534px;
 }
+nav{
+  
+    margin: 20px 100px 0 100px;
+    font-size: larger;
+    font-weight: 600;
+}
+#section-sort{
+    background-color:#901C1C;
+    width: 150px;
+    height: 35px;
+    font-size: 18px;
+    color: #FAFAFA;
+    border-radius: 5px;
+    padding-left: 5px;
+}
+#section-sort:hover{
+    background-color:#D3573C;
+    cursor: pointer;
+    color: #080808;
+}
 
 #containerImage{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 80px;
-    margin: 100px 100px 0 100px;
+    margin: 40px 100px 0 100px;
 }
 #containerImage video{
     object-fit: cover;
@@ -65,12 +97,71 @@
     justify-content: space-between;
     align-items: center;
 }
+.positionOfHeart{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+.heartStyle{
+    width: 25px;
+    height: 25px;
+    color: #901C1C;
+}
+.positionOfDiv{
+    position: relative;
+}
 .titleStyle{
     color: #901C1C;
     font-size: 18px;
 }
 .colorOfHeart{
     color: #901C1C;
+}
+.heartDiv{
+   position: relative; 
+}
+.heartPosition{
+position: absolute;
+top: -10px;
+right: 0;
+}
+.like-yes{
+    display: none;
+}
+.like-no{
+    cursor: pointer;
+}
+
+.heartP{
+    position: absolute;
+    top: -25px;
+    right: 30px;
+    font-size: large;
+}
+#totalLikesDiv {
+    position: fixed;
+    right: 10px;
+    bottom: 0;
+    width: 300px;
+    height: 70px;
+    background-color: #D3573C;
+    font-size: 20px;
+    font-weight: 550;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 5px 5px 0 0;
+}
+#totalLikeHeartDiv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+#totalLikeHeartDiv img{
+    width: 20px;
+    height: 20px;
 }
 .contact_button {
     font-size: 20px;
@@ -92,7 +183,7 @@
 .modal {
     border-radius: 5px;
     background-color: #DB8876;
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,18 +195,28 @@
 .modal header {
     justify-content: space-between;
     width: 100%;
+    position: relative;
+    align-items: flex-end;
 }
 
 .modal header img {
     cursor: pointer;
+    position: absolute;
+    top: 3px;
+    right: 5px;
 }
 
 .modal header h2 {
-    font-size: 64px;
+    font-size: 42px;
     font-weight: normal;
     text-align: center;
+   
 }
-
+#titleForm{
+    position: absolute;
+    top: 28px;
+    font-size: 28px;
+}
 form {
     display: flex;
     width: 100%;
@@ -125,7 +226,7 @@ form {
 
 form label {
     color: #312E2E;
-    font-size: 36px;
+    font-size: 28px;
 }
 
 form div {
@@ -138,7 +239,92 @@ form div {
 
 form input {
     width: 100%;
-    height: 68px;
+    height: 60px;
     border: none;
     border-radius: 5px;
+    font-size: 26px;
+    padding-left: 10px;
+}
+#formMessageInput{
+    height: 200px;
+}
+/* light box */
+#lightbox{
+  display: none;
+  position: fixed;
+  z-index: 100;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+  background-color: rgb(250, 241, 241);
+  padding-top: 30px;
+}
+#lightbox__container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+#lightbox__container img{
+    width: 755px;
+    height: 500px;
+    object-fit:cover;
+    object-position: center;
+    margin-bottom: 50px;
+}
+#lightbox__container video{
+    width: 755px;
+    height: 500px;
+}
+.cursor{
+    cursor: pointer;
+}
+.lightbox__next{
+    width: 60px;
+    height: 60px;
+    color: #080808;
+    border: none;
+    position: fixed;
+    top: 50%;
+    right: 200px;
+    margin-top: -14px;
+    z-index: 11;
+    cursor: pointer;
+}
+.lightbox__back{
+    width: 60px;
+    height: 60px;
+    color: #080808;
+    border: none;
+    position: fixed;
+    top: 50%;
+    left: 200px;
+    margin-top: -14px;
+    z-index: 11;
+    cursor: pointer;
+}
+.lightbox__close{
+    width: 50px;
+    height: 50px;
+    color: #080808;
+    border: none;
+    position: fixed;
+    top: 5%;
+    right:200px;
+    margin-top: -14px;
+    z-index: 11;
+    cursor: pointer;
+}
+.lightBocTitle{
+    position: fixed;
+    bottom: 5px;
+    left: 320px;
+    color: #901C1C;
+    font-size: 20px;
 }
