--- a/css/photographer.css
+++ b/css/photographer.css
@@ -18,43 +18,33 @@
     background-color: #FAFAFA;
     height: 300px;
     margin: 0 100px;
-    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 #photographerImageStyle{
-    position: absolute;
-    right: 50px;
-    top: 50px;
     width: 200px;
     height: 200px;
     border-radius: 50%;
     object-fit: cover;
 }
-.photographerPosition{
-    position: absolute;
-    left: 50px;
-}
+
 #photographerNameStyle{
-    top:20px;
     font-size:55px;
     color: #D3573C;
     font-weight: 400;
 }
 #photographerTitleStyle{
-    top: 100px;
     font-size: x-large;
     font-weight: normal;
     color: #901C1C;
 }
 #photographerTagStyle{
-    top: 160px;
     font-size: 20px;
     color: gray;
 } 
-.contactButtonPosition {
-    position: absolute;
-    top: 126px;
-    left: 534px;
-}
+
 nav{
   
     margin: 20px 100px 0 100px;
@@ -77,10 +67,12 @@ nav{
 }
 
 #containerImage{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 80px;
-    margin: 40px 100px 0 100px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 70px;
+    margin: 40px 100px 30px 100px;
+    justify-content: center;
+    align-items: center;
 }
 #containerImage video{
     object-fit: cover;
@@ -109,7 +101,13 @@ nav{
     color: #901C1C;
 }
 .positionOfDiv{
-    position: relative;
+    width: 100px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: none;
+    background-color: white;
 }
 .titleStyle{
     color: #901C1C;
@@ -134,10 +132,9 @@ right: 0;
 }
 
 .heartP{
-    position: absolute;
-    top: -25px;
-    right: 30px;
     font-size: large;
+    color: #080808;
+    background-color: white;
 }
 #totalLikesDiv {
     position: fixed;
@@ -174,12 +171,18 @@ right: 0;
     background-color: #901C1C;
     border-radius: 5px;
     cursor: pointer;
+    order: 1;
 }
 .contact_button:hover{
     background-color: #D3573C;
     color: black;
 }
-
+#imageDiv{
+    order: 2;
+}
+#profilInfo{
+    order: 0;
+}
 .modal {
     border-radius: 5px;
     background-color: #DB8876;
@@ -328,3 +331,17 @@ form input {
     color: #901C1C;
     font-size: 20px;
 }
+
+/* @media screen and (max-width:1200px) {
+.contactButtonPosition {
+    position: absolute;
+    top: 200px;
+    left: 334px;
+}
+#containerImage{
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+    margin: 40px 100px 0 100px;
+}
+    
+} */
