--- a/css/style.css
+++ b/css/style.css
@@ -26,13 +26,16 @@ h1 {
 }
 
 .photographer_section {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 70px;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 70px;
+    margin-bottom: 70px; 
+    justify-content: center;
+    align-items: center;
+    column-gap: 170px;
+    row-gap: 50px;
 }
-
+   
 .photographer_section a {
     justify-self: center;
     display: flex;
@@ -58,7 +61,6 @@ h1 {
     width: 200px;
     border-radius: 50%;
     object-fit: cover;
-    background: -98 25;
 }
 .photographerAside{
     text-align: center;
