--- a/css/photographer.css
+++ b/css/photographer.css
@@ -34,19 +34,21 @@
     font-size:55px;
     color: #D3573C;
     font-weight: 400;
+    margin-bottom: 0;
 }
 #photographerTitleStyle{
     font-size: x-large;
     font-weight: normal;
     color: #901C1C;
+    margin-bottom: 0;
 }
 #photographerTagStyle{
     font-size: 20px;
     color: gray;
+    margin-bottom: 0;
 } 
 
 nav{
-  
     margin: 20px 100px 0 100px;
     font-size: larger;
     font-weight: 600;
@@ -332,16 +334,21 @@ form input {
     font-size: 20px;
 }
 
-/* @media screen and (max-width:1200px) {
-.contactButtonPosition {
-    position: absolute;
-    top: 200px;
-    left: 334px;
+@media screen and (max-width:1000px) {
+.photograph-header{
+    flex-direction: column-reverse;
+    height: 600px;
+    align-items: center;
+    margin: 0 130px;
 }
-#containerImage{
-    grid-template-columns: 1fr 1fr;
-    gap: 80px;
-    margin: 40px 100px 0 100px;
+#profilInfo{
+    text-align: center;
 }
+#photographerNameStyle{
+    margin-top: 0;
+}
+nav{
+    margin: 20px 100px 0 130px
+}  
     
-} */
+}
