--- a/css/photographer.css
+++ b/css/photographer.css
@@ -71,7 +71,7 @@ nav{
 #containerImage{
     display: flex;
     flex-wrap: wrap;
-    gap: 70px;
+    gap: 60px;
     margin: 40px 100px 30px 100px;
     justify-content: center;
     align-items: center;
@@ -81,11 +81,12 @@ nav{
     border-radius: 5px;
 }
 .dimensionImg{
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
     border-radius: 5px;
 }
+
 .positionOfLikes{
     display: flex;
     justify-content: space-between;
@@ -290,6 +291,7 @@ form input {
 .cursor{
     cursor: pointer;
 }
+
 .lightbox__next{
     width: 60px;
     height: 60px;
@@ -329,12 +331,12 @@ form input {
 .lightBocTitle{
     position: fixed;
     bottom: 5px;
-    left: 320px;
-    color: #901C1C;
+    left: 250px;
+    color: black;
     font-size: 20px;
 }
 
-@media screen and (max-width:1000px) {
+@media screen and (max-width:1100px) {
 .photograph-header{
     flex-direction: column-reverse;
     height: 600px;
